@@ -1,5 +1,10 @@
 2008-05-02  Mike Krüger <mkrueger@novell.com> 
 
+	* Mono.TextEditor/TextEditorData.cs, Mono.TextEditor/TextEditor.cs,
+	  Mono.TextEditor/ISearchEngine.cs: Abstracted the search engine.
+
+2008-05-02  Mike Krüger <mkrueger@novell.com> 
+
 	* Mono.TextEditor/TextEditor.cs: Fixed Bug 385737 - Text editor shows
 	  unnecessary horizontal scrollbar
 
